# timecard-standalone

./: .gitattributes  .gitignore  LICENSE  README.md  project.code-workspace
documents/: mkdocs.yml
documents/docs/: authorization.md  communications.md  directory-hierarchy.md  index.md
documents/docs/orm/: auth_credentials.md  user.md
documents/docs/routers/: logon.md
public/: index.html
scripts/: setup.sh
server/: pyproject.toml
server/common/lib/: config.py  constants.py
server/common/lib/database/: __init__.py  database.py
server/common/lib/database/orm/: __init__.py  auth_credentials.py  credentials.py
server/common/lib/utils/: __init__.py  auth_util.py  general_util.py
server/common/lib/utils/decorators/: __init__.py  handle_exceptions.py
server/common/lib/validator/: __init__.py  type_validator.py
server/common/lib/validator/types/: __init__.py  generals.py
server/config/: logger.yaml  settings.yaml
server/src/app/: __init__.py
server/src/app/response/: __init__.py  html_response.py  json_response.py
server/src/app/routers/: __init__.py  logon.py  register.py  static.py
server/src/app/schemas/: __init__.py  register_schema.py
viewer/: package.json  tsconfig.json
viewer/scripts/: build.ts
viewer/src/: index.ts
viewer/src/Utils/: Xhr.ts
viewer/src/components/: UserInterface.tsx
viewer/src/core/: Application.ts  Constants.ts
